// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApartmentNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="apartment_number"
      >
        Numer mieszkania
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Numer mieszkania"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value="12345678900"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  label="Numer mieszkania"
  name="apartment_number"
  placeholder="Numer mieszkania"
  value=""
/>
`;

exports[`<ApartmentNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<ApartmentNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="apartment_number"
      >
        ApartmentNumber
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="ApartmentNumber"
          name="apartment_number"
          placeholder="Numer mieszkania"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
